force-app/main/default/objects/Capital_Contribution__c/Capital_Contribution__c.object-meta.xml
<CustomObject>
    <description>Contains information on how much each funder/investor is contributing to the fund</description>
    <label>Capital Contribution</label>
    <nameField>
        <displayFormat>CP-{00000000}</displayFormat>
        <label>Capital Contribution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Capital Contributions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>