force-app/main/default/objects/Capital_Contribution__c/fields/Contributed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contributed_Amount__c</fullName>
    <label>Contributed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>