force-app/main/default/objects/Capital_Contribution__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Capital Contributions</relationshipLabel>
    <relationshipName>Capital_Contributions</relationshipName>
    <type>Lookup</type>
</CustomField>